===================
2019/3/12
v 6-0.63

- Added ObjectTypeObject.
- Changed type_of() to use ObjectTypeObject.
- Added typename_of() Copper method:
-- Engine::process_sys_typename
-- SystemFunction::_typename
- Added have_same_typename() Copper method:
-- Engine::process_sys_have_same_typename()
-- SystemFunction::_have_same_typename
- Provided generic implementation for Object::typename().
- Changed ObjectType::UnknownData to ObjectType::Unknown.
- Engine::process_sys_are_same_type() now correctly returns a boolean when there are no arguments.
- Added are_type()
-- Engine::process_sys_are_type()
- Added equal_type_value()
-- Engine::process_sys_equal_type_value()
- Added String::set(uint, char)

EngMsgToStr
- Updated getSystemFunctionDefaultName() to have typename_of, typename_of, have_same_typename, are_type, and equal_type_value.

docs
- Updated

===================
2019/3/11
v 6-0.622

- Removed isIntegerObject() and isDecimalNumObject().
- Changed Engine::process_sys_are_integer() to use IntegerObject::supportsInterface().
- Changed Engine::process_sys_are_decimal() to use DecimalNumObject::supportsInterface().
- Removed SubType and getSubType() from NumericObjectType, IntegerObject, DecimalNumObject.

Printer.h
- Changed Printer::call() to use supportsInterface() for numbers.

===================
2018/12/17-19
v 6-0.621

- Changed language version to 3.2.
- Added system function for sharing function object bodies, "share_body". Related methods:
-- FunctionObject::createFromBody()
-- Engine::process_sys_share_body( FuncFoundTask& )
-- Engine::shareBody( Function&, Function& )
- Changed Function::set(Function&) to Function::set(Function&, bool) to allowing disabling scope copying.
DEV NOTE: Even for "share_body", Function::result has been copied because otherwise it could be indirectly changed via for example increment methods.
- Fixed Function::operator=() to return its own address. (Wasn't used but users might want it.)