@@ -1,4 +1,4 @@
-// Copyright 2016-2018 Nicolaus Anderson
+// Copyright 2016-2019 Nicolaus Anderson
 
 #include <execinfo.h>
 #include <signal.h>
@@ -38,7 +38,7 @@ int main() {
 	engine.setPrintTokensWhenParsing(true);
 	signal(SIGSEGV, handler);
 	std::setbuf(stdout,0);
-	std::printf("\33[92m\n \t\tCOPPER LANGUAGE\n\t\tConsole Application\n\t\t(c) 2016-2018 Nicolaus Anderson\n\33[4m                                                              \33[0m\n");
+	std::printf("\33[92m\n \t\tCOPPER LANGUAGE\n\t\tConsole Application\n\t\t(c) 2016-2019 Nicolaus Anderson\n\33[4m                                                              \33[0m\n");
 
 #ifdef COPPER_REF_LEVEL_MESSAGES
 	printer.declareStackBased();
